change repositories with hibernate + half part of booking logic