@@ -7,34 +7,36 @@ import ru.practicum.shareit.user.dto.UpdateUserRequest;
 import ru.practicum.shareit.user.dto.UserDto;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class UserServiceImpl implements UserService {
-    private final UserRepository userRepository;
+    private final JpaUserRepository userRepository;
 
     public List<UserDto> getAllUsers() {
-        return userRepository.findAllUsers().stream().map(UserMapper::mapToUserDto).toList();
+        return userRepository.findAll().stream().map(UserMapper::mapToUserDto).collect(Collectors.toList());
     }
 
     public UserDto getUserById(long userId) {
-        User user = userRepository.findUserById(userId).orElseThrow(() -> new NotFoundUserException(userId));
+        User user = userRepository.findById(userId).orElseThrow(() -> new NotFoundUserException(userId));
         return UserMapper.mapToUserDto(user);
     }
 
     public UserDto createUser(User user) {
-        return UserMapper.mapToUserDto(userRepository.createUser(user));
+        return UserMapper.mapToUserDto(userRepository.save(user));
     }
 
     public UserDto updateUser(UpdateUserRequest updateUserRequest, long userId) {
         updateUserRequest.setId(userId);
-        userRepository.findUserById(userId).orElseThrow(() -> new NotFoundUserException(userId));
-        return UserMapper.mapToUserDto(userRepository.updateUser(updateUserRequest));
+        User user = userRepository.findById(userId).orElseThrow(() -> new NotFoundUserException(userId));
+        return UserMapper.mapToUserDto(userRepository.save(UserMapper.updateUserFields(updateUserRequest, user)));
     }
 
     public UserDto deleteUser(long userId) {
-        userRepository.findUserById(userId).orElseThrow(() -> new NotFoundUserException(userId));
-        return UserMapper.mapToUserDto(userRepository.deleteUser(userId));
+        User user = userRepository.findById(userId).orElseThrow(() -> new NotFoundUserException(userId));
+        userRepository.delete(user);
+        return UserMapper.mapToUserDto(user);
     }
 
 }
